external-crates/move/crates/move-compiler/tests/move_check/liveness/dead_refs_branch_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC07002]: mutable borrow rule violated
  ┌─ tests/move_check/liveness/dead_refs_branch_invalid.move:8:13
  │
4 │         let x_ref = &mut x;
  │                     ------ It is still being mutably borrowed by this reference
  ·
8 │         _ = x;
  │             ^ Invalid copy of variable 'x'

error[EC07003]: invalid operation, could create a dangling reference
  ┌─ tests/move_check/liveness/dead_refs_branch_invalid.move:9:13
  │
4 │         let x_ref = &mut x;
  │                     ------ It is still being mutably borrowed by this reference
  ·
9 │         _ = move x;
  │             ^^^^^^ Invalid move of variable 'x'

error[EC07002]: mutable borrow rule violated
   ┌─ tests/move_check/liveness/dead_refs_branch_invalid.move:20:13
   │
15 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
   ·
20 │         _ = x;
   │             ^ Invalid copy of variable 'x'

error[EC07003]: invalid operation, could create a dangling reference
   ┌─ tests/move_check/liveness/dead_refs_branch_invalid.move:21:13
   │
15 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
   ·
21 │         _ = move x;
   │             ^^^^^^ Invalid move of variable 'x'
